--- a/app.json
+++ b/app.json
@@ -31,6 +31,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "c19450ed-66e3-424b-9d0f-6ac7e7c57921"
+      }
+    },
+    "owner": "tesina"
   }
 }
